--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@
 .DS_Store
 *.pem
 .vscode
+.sqlite.db
 
 # debug
 npm-debug.log*
@@ -33,3 +34,4 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
