--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "migrate": "drizzle-kit migrate"
   },
   "dependencies": {
+    "@lucia-auth/adapter-drizzle": "^1.0.7",
     "@nextui-org/react": "^2.4.6",
+    "@node-rs/argon2": "^1.8.3",
     "@tanstack/react-query": "^5.51.11",
     "@tanstack/react-query-devtools": "^5.51.11",
     "better-sqlite3": "^11.1.2",
     "drizzle-orm": "^0.32.1",
     "framer-motion": "^11.3.8",
+    "lucia": "^3.2.0",
+    "nanoid": "^5.0.7",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
     "react": "^18",
